# hermes-discord-bot-tools

./: README.md  __init__.py  plugin.yaml  pyproject.toml  schemas.py  tools.py
.github/workflows/: ci.yml
tests/: test_plugin.py
